--- a/Foundation Lab/FoundationLab.entitlements
+++ b/Foundation Lab/FoundationLab.entitlements
@@ -4,5 +4,13 @@
 <dict>
 	<key>com.apple.developer.healthkit</key>
 	<true/>
+	
+	<!-- macOS sandboxing and user-selected file access (needed for SwiftUI .fileImporter) -->
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
 </dict>
 </plist>
